--- a/index.html
+++ b/index.html
@@ -1,107 +1,119 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="https://kit.fontawesome.com/94ea3f3823.js" crossorigin="anonymous"></script>
-    <title>Shaun Czubkowski - Software Engineer</title>
-  </head>
-  <body>
-      <div class="container">
-        <nav class="navbar navbar-light bg-light justify-content-between">
-            <a class="navbar-brand">Shaun Czubkowski</a>
-            <span class="navbar-text">
-                <a href="https://www.linkedin.com/in/shaun-czubkowski/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-                <a href="https://github.com/shaunczubkowski" target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
-            </span>
-          </nav>
-        
-        <div class="container info d-flex flex-column">
-            <h1 class="display-6 intro-text">Hello, I'm Shaun <span id="pronunciation" data-toggle="tooltip" data-placement="top" title="pronounced chub-cow-ski">Czubkowski</span>.</h1>
-            <p class="lead">
-                A full-stack web developer, based in Appleton, WI.
-            </p>
-            <p class="lead">
-                I build web and mobile applications while focusing on the end-user experience.
-            </p>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/main.css">
+  <script src="https://kit.fontawesome.com/94ea3f3823.js" crossorigin="anonymous"></script>
+  <title>Shaun Czubkowski - Software Engineer</title>
+</head>
+
+<body>
+  <div class="container">
+    <nav class="navbar navbar-light bg-light justify-content-between">
+      <a class="navbar-brand">Shaun Czubkowski</a>
+      <span class="navbar-text">
+        <a href="https://www.linkedin.com/in/shaun-czubkowski/" target="_blank"><i
+            class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://github.com/shaunczubkowski" target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
+      </span>
+    </nav>
+
+    <div class="container info d-flex flex-column">
+      <h1 class="display-6 intro-text">Hello, I'm Shaun <span id="pronunciation" data-toggle="tooltip"
+          data-placement="top" title="pronounced chub-cow-ski">Czubkowski</span>.</h1>
+      <p class="lead">
+        A software engineer, based in Appleton, WI.
+      </p>
+      <p class="lead">
+        I build web and mobile applications while focusing on the end-user experience.
+      </p>
+    </div>
+    <hr class="my-4">
+    <h4 class="section-title">Portfolio</h4>
+    <hr class="my-4">
+    <div class="card-deck">
+      <div class="card">
+        <img class="card-img-top" src="/img/pokketmoney/pm-search-results.PNG" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Pokket Money</h5>
+          <p class="card-text">Discover how candidates fund their campaigns.</p>
+          <p class="card-text"><small class="text-muted">Angular, Angular Material, 3rd Party API, HTML</small></p>
+          <a href="/portfolio/pokket-money/pokket-money.html" class="btn btn-primary">View Project Page</a>
         </div>
-        <hr class="my-4">
-        <h4 class="section-title">Portfolio</h4>
-        <hr class="my-4">
-        <div class="card-deck">
-            <div class="card">
-              <img class="card-img-top" src="/img/pokketmoney/pm-search-results.PNG" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Pokket Money</h5>
-                <p class="card-text">Discover how candidates fund their campaigns.</p>
-                <p class="card-text"><small class="text-muted">Angular, Angular Material, 3rd Party API, HTML</small></p>
-                <a href="/portfolio/pokket-money/pokket-money.html" class="btn btn-primary">View Project Page</a>
-              </div>
-            </div>
-            <div class="card">
-                <!-- <img class="card-img-top" src="/img/pokketmoney/pm-search-results.PNG" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Pokket Money</h5>
-                  <p class="card-text">Discover how candidates fund their campaigns.</p>
-                  <p class="card-text"><small class="text-muted">Angular, Angular Material, 3rd Party API, HTML</small></p>
-                  <a href="#" class="btn btn-primary">View Project Page</a>
-                </div> -->
-              </div>
-              <div class="card">
-                <!-- <img class="card-img-top" src="/img/pokketmoney/pm-search-results.PNG" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Pokket Money</h5>
-                  <p class="card-text">Discover how candidates fund their campaigns.</p>
-                  <p class="card-text"><small class="text-muted">Angular, Angular Material, 3rd Party API, HTML</small></p>
-                  <a href="#" class="btn btn-primary">View Project Page</a>
-                </div> -->
-              </div>
-        </div>
-        <hr class="my-4">
-        <h4 class="section-title">Skills</h4>
-        <hr class="my-4">
-        <div class="container d-flex flex-wrap justify-content-between">
-            <div class="skill">
-                <i class="fab fa-html5 fa-10x"></i>
-                <p>HTML</p>
-            </div>
-            <div class="skill">
-                <i class="fab fa-css3-alt fa-10x"></i>
-                <p>CSS/Bootstrap</p>
-            </div>
-            <div class="skill">
-                <i class="fab fa-js fa-10x"></i>
-                <p>JavaScript</p>
-            </div>
-            <div class="skill">
-                <i class="fab fa-node-js fa-10x"></i>
-                <p>Node.js</p>
-            </div>
-            <div class="skill">
-                <i class="fab fa-angular fa-10x"></i>
-                <p>Angular</p>
-            </div>
-            <div class="skill">
-                <i class="fas fa-mobile-alt fa-10x"></i>
-                <p>NativeScript</p>
-            </div>
-            <div class="skill">
-                <i class="fab fa-java fa-10x"></i>
-                <p>Java</p>
-            </div>
-        </div>
-        
       </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
-  </body>
+      <div class="card">
+        <!-- <img class="card-img-top" src="/img/pokketmoney/pm-search-results.PNG" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Pokket Money</h5>
+                  <p class="card-text">Discover how candidates fund their campaigns.</p>
+                  <p class="card-text"><small class="text-muted">Angular, Angular Material, 3rd Party API, HTML</small></p>
+                  <a href="#" class="btn btn-primary">View Project Page</a>
+                </div> -->
+      </div>
+      <div class="card">
+        <!-- <img class="card-img-top" src="/img/pokketmoney/pm-search-results.PNG" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Pokket Money</h5>
+                  <p class="card-text">Discover how candidates fund their campaigns.</p>
+                  <p class="card-text"><small class="text-muted">Angular, Angular Material, 3rd Party API, HTML</small></p>
+                  <a href="#" class="btn btn-primary">View Project Page</a>
+                </div> -->
+      </div>
+    </div>
+    <hr class="my-4">
+    <h4 class="section-title">Skills</h4>
+    <hr class="my-4">
+    <div class="container d-flex flex-wrap justify-content-between">
+      <div class="skill">
+        <i class="fab fa-html5 fa-10x"></i>
+        <p>HTML</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-css3-alt fa-10x"></i>
+        <p>CSS/Bootstrap</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-js fa-10x"></i>
+        <p>JavaScript</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-node-js fa-10x"></i>
+        <p>Node.js</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-angular fa-10x"></i>
+        <p>Angular</p>
+      </div>
+      <div class="skill">
+        <i class="fas fa-mobile-alt fa-10x"></i>
+        <p>NativeScript</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-java fa-10x"></i>
+        <p>Java</p>
+      </div>
+    </div>
+
+  </div>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
